<resources>
    <!-- Preference Keys -->
    <string name="login_preference_key">LOGIN_INFO</string>
    <string name="category_preference_key">CATEGORY_INFO</string>

    <string name="searchHint">Search</string>

    <string name="placeholder">Sample Text</string>
    <string name="app_name">Tutorial On Demand</string>
    <string name="startLive">Start Livestream</string>
    <string name="genText">%1$s</string>

    <string name="title_activity_livestream">LivestreamActivity</string>
    <string name="dropCallBtn">Drop</string>
    <string name="switchCamBtn">Switch</string>
    <string name="muteBtn">Mute</string>
    <string name="togVideoBtn">Video</string>
    <string name="chatFunction">Start a chat</string>
    <string name="messageHint">Message</string>

    <string name="url">http://192.168.254.124:8000</string>
    <string name="title_activity_login">Sign in</string>

    <!-- for Google Login API -->
    <!--<string name="google_backend_id">616135059456-lib14ph7lujh1rqhc1q2aaneqrp0qhjj.apps.googleusercontent.com</string>-->
    <string name="google_backend_id">616135059456-lib14ph7lujh1rqhc1q2aaneqrp0qhjj.apps.googleusercontent.com</string>


    <!-- For Facebook Login API -->
    <string name="facebook_app_id">186047235517026</string>
    <string name="fb_login_protocol_scheme">fb186047235517026</string>

    <!-- For LoginActivity -->
    <string name="registerText">No Account? Sign up here!</string>
    <string name="signFacebookText">Sign In With Facebook</string>
    <string name="signGoogleText">Sign In With Google</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- For HomeHomeActivity -->
    <string name="welcomeText">Welcome, %1$s, to Tutorial on Demand\nWhat would you like to do?</string>
    <string name="askText">Ask a Question</string>
    <string name="answerText">Answer a Question</string>

    <!-- For LivestreamActivty -->
    <string name="waitingForVideo">Waiting for video&#8230;</string>

    <!-- For AskActivity -->
    <string name="askHeader">Select Category</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- For all action bar buttons -->
    <string name="sendAction">Select Categories</string>
    <string name="categoryCount">%1$d Selected</string>

    <!-- For all Alert Dialogs -->
    <string name="logOutAlertTitle">LOG OUT</string>
    <string name="logOutAlertMessage">Are you sure you want to log out?</string>
    <string name="exitAppAlertTitle">EXIT TUTORIAL ON DEMAND</string>
    <string name="exitAppAlertMessage">Are you sure you want to exit?</string>
    <string name="cancelFindAlertMessage">Are you sure you want to stop?</string>
    <string name="cancelFindAlertTitle">Stop</string>
    <string name="acceptFailedAlertMessage">You failed to accept in time. Please try again!</string>
    <string name="acceptFailedAlertTitle">Failed To Accept</string>
    <string name="findFailedAlertMessage">It took too long to find your %1$s!</string>
    <string name="findFailedAlertTitle">Failed to Find</string>
    <string name="declinedAlertMessage">Your %1$s backed out of your request</string>
    <string name="declinedAlertTitle">Match Declined</string>
    <string name="notConnectedAlertMessage">Can\'t connect to the server!\nPlease check your connection</string>
    <string name="notConnectedAlertTitle">Error Connecting to Server</string>
    <string name="backLivestreamAlertMessage">Are you sure you would like to exit?\nDoing so will drop the call.</string>
    <string name="backLivestreamAlertTitle">Exit Call</string>
    <string name="selfDeclineAlertMessage">You have backed out of the session!</string>
    <string name="selfDeclineAlertTitle">Cancelled Session</string>
    <string name="facebookLoginErrorAlertMessage">There was an error in connection to Facebook!</string>
    <string name="facebookLoginErrorAlertTitle">Login Error</string>

    <!-- Waiting activity -->
    <string name="waitingMessage">Searching for a %1$s</string>
    <string name="foundMessage">Found Your %1$s!</string>
    <string name="acceptButtonHeader">Accept</string>
    <string name="declineButtonHeader">Decline</string>
    <string name="timerTextHeader">Time Elapsed</string>
    <string name="timeElapsed">%1$d:%2$d%3$d</string>
    <string name="matchName">%1$s %2$s</string>
    <string name="waitingForStudent">Waiting for student to accept &#8230;</string>
    <string name="acceptTimerHeader">Time Left to Accept</string>

    <!-- Profile Activity -->
    <string name="profileName">%1$s %2$s</string>
    <string name="profileEmail">%1$s</string>
    <string name="profileDateJoined">%1$s</string>
    <string name="profilePublicDateJoined">Joined on %1$s</string>

</resources>
